# rust-postgres-query

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: basic_select.rs
postgres_query/: Cargo.toml
postgres_query/examples/: basic.rs  basic_select.rs
postgres_query/src/: client.rs  error.rs  execute.rs  extract.rs  fetch.rs  lib.rs  parse.rs
postgres_query/src/client/: cache.rs
postgres_query/tests/: deadpool.rs  execute.rs  query_macro.rs
postgres_query_derive/: Cargo.toml
postgres_query_derive/src/: attrs.rs  lib.rs
postgres_query_macro/: Cargo.toml
postgres_query_macro/src/: from_sql_row.rs  lib.rs  macros.rs  query.rs
postgres_query_macro/src/from_sql_row/: attrs.rs  partition.rs  validate.rs
src/: lib.rs
tests/: select_query.rs
