[package]
name = "postgres_query"
version = "0.3.1"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]
edition = "2018"
description = "Write and execute SQL queries with ease"
repository = "https://github.com/nolanderc/rust-postgres-query"
license = "MIT OR Apache-2.0"
readme = "../README.md"

[lib]
name = "postgres_query"

[[example]]
name = "basic"
path = "examples/basic.rs"

[dependencies]
postgres_query_macro = { version = "0.3.0", path = "../postgres_query_macro" }
proc-macro-hack = "0.5.11"
postgres-types = "0.1.0"
serde = "1.0.104"
tokio-postgres = "0.5.1"
futures = "0.3.1"
async-trait = "0.1.22"
thiserror = "1.0.9"

[dev-dependencies]
bytes = "0.5.3"
tokio = { version = "0.2.6", features = ["macros"] }
structopt = "0.3.7"
anyhow = "1.0.26"
