[package]
name = "postgres_query"
version = "0.3.3"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]
edition = "2018"
description = "Write and execute SQL queries with ease"
repository = "https://github.com/nolanderc/rust-postgres-query"
license = "MIT OR Apache-2.0"
readme = "../README.md"

[lib]
name = "postgres_query"

[[example]]
name = "basic"
path = "examples/basic.rs"

[dependencies]
postgres_query_macro = { version = "0.3.1", path = "../postgres_query_macro" }
proc-macro-hack = "0.5.19"
postgres-types = "0.1.3"
serde = "1.0.117"
tokio-postgres = "0.6.0"
futures = "0.3.7"
async-trait = "0.1.41"
thiserror = "1.0.22"

[dev-dependencies]
bytes = "0.5.6"
tokio = { version = "0.3.3", features = ["macros", "rt-multi-thread"] }
structopt = "0.3.20"
anyhow = "1.0.34"
