[package]
name = "postgres_query"
version = "0.3.3"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]
edition = "2018"
description = "Write and execute SQL queries with ease"
repository = "https://github.com/nolanderc/rust-postgres-query"
license = "MIT OR Apache-2.0"
readme = "../README.md"

[lib]
name = "postgres_query"

[[example]]
name = "basic"
path = "examples/basic.rs"

[dependencies]
postgres_query_macro = { version = "0.3.3", path = "../postgres_query_macro" }
proc-macro-hack = "0.5.19"
postgres-types = "0.2.0"
serde = "1.0.118"
tokio-postgres = "0.7.0"
futures = "0.3.8"
async-trait = "0.1.42"
thiserror = "1.0.23"

[dev-dependencies]
bytes = "1.0.0"
tokio = { version = "1.0.1", features = ["macros", "rt-multi-thread"] }
structopt = "0.3.21"
anyhow = "1.0.37"
