[package]
name = "postgres_query_macro"
version = "0.3.0"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]
edition = "2018"
description = "Define SQL queries with human-readable parameter names"
repository = "https://github.com/nolanderc/rust-postgres-macro"
license = "MIT OR Apache-2.0"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.5.11"
quote = "1.0.2"
syn = { version = "1.0.11", features = ["full"] }
proc-macro2 = "1.0.6"
