[package]
name = "postgres_query_macro"
version = "0.3.1"
authors = ["Christofer Nolander <christofer.nolander@gmail.com>"]
edition = "2018"
description = "Write and execute SQL queries with ease"
repository = "https://github.com/nolanderc/rust-postgres-macro"
license = "MIT OR Apache-2.0"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro-hack = "0.5.19"
quote = "1.0.7"
syn = { version = "1.0.48", features = ["full"] }
proc-macro2 = "1.0.24"
